<resources>
    <string name="app_name">Uy\'s Shop</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="notify1">Vui lòng nhập nghiêm túc!</string>
    <string name="notify2">Giới hạn một lần mua là 15 sản phẩm</string>
    <string name="notify3">Sản phẩm này đã đạt giới hạn trong giỏ hàng</string>
    <string name="user_name">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng kí</string>
    <string name="remember_me">Nhớ mật khẩu!</string>
    <string name="about_product">Mô tả sản phẩm</string>
    <string name="product_name">tên sản phẩm</string>
    <string name="product_left">Còn lại: </string>
    <string name="user_email">Địa chỉ email</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="finish">Hoàn thành</string>
    <string name="verification_email">Xác minh địa chỉ email của bạn!</string>
    <string name="link_to_email">Gửi link xác minh đến địa chỉ email của tôi!</string>
    <string name="link_verification">Link xác minh đã được gửi đến địa chỉ email:</string>
    <string name="LogByAnotherAcc">Đăng nhập bằng tài khoản khác</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="location">Vị trí địa lý</string>
    <string name="rate">Xếp hạng và Đánh giá</string>
    <string name="LogToConti">Đăng nhập để tiếp tục</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="conti">Tiếp tục</string>
    <string name="uIcon">Hình đại điện trang cá nhân</string>
    <string name="uWall">Hình nền trang cá nhân</string>
    <string name="forgot_password">Quên mật khẩu?</string>

    <string name="google_place_api">AIzaSyDatjE4KJI4Oh3NCOnF9Ug69a9UGL-HNHU</string>
    <!--<string name="UrlRef">gs://shopping-online-6c182.appspot.com</string>-->

    <string name="resetPass1">Địa chỉ email dùng để đăng kí tài khoản:</string>
    <string name="resetPass2">Vui lòng điền địa chỉ email!</string>
    <string name="resetPass3">Mail reset mật khẩu đã được gửi đến </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="commit">Xác nhận</string>
    <string name="money">Tiền trong tài khoản:</string>
    <string name="NullCartNotify">Giỏ hàng của bạn hiện tại không có mặt hàng nào!</string>
    <string name="shipper_mode">Chế độ shipper:</string>

</resources>
