<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nguyenvukhanhuygmail.shoppingonline.activity.LoginAndSignUp">

    <ImageView
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/app_icon"
        android:id="@+id/logo_app"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/box"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_24dp"
                android:id="@+id/edt_username"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/user_email"
                android:textColorHint="@color/white"
                android:ems="12"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:background="@android:color/transparent"
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:ems="12"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_login"
                android:textSize="16sp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="16dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:text="@string/login"
                android:background="@drawable/background_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_signup"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:text="@string/signup"
                android:background="@drawable/background_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_ForgotPass"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
