<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/log_and_signup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguyenvukhanhuygmail.shoppingonline.activity.SignUp">

    <ImageView
        android:id="@+id/back"
        android:layout_margin="15dp"
        android:src="@drawable/ic_arrow_back_white_24dp"
        android:layout_width="24dp"
        android:layout_height="24dp" />
    
    <TextView
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup"
        android:textSize="35sp"
        android:textColor="@color/whire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="12"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/whire"
                android:textColorHint="@color/whire" />

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/whire"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/edit_useremail"
                android:inputType="textEmailAddress"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/user_email"
                android:textColorHint="@color/whire"
                android:ems="12"
                android:maxLines="1"
                android:textColor="@color/whire"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/whire"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/edit_pass"
                android:inputType="textPassword"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/whire"
                android:ems="12"
                android:maxLines="1"
                android:textColor="@color/whire"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/whire"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/edit_repass"
                android:inputType="textPassword"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/re_password"
                android:textColorHint="@color/whire"
                android:ems="12"
                android:maxLines="1"
                android:textColor="@color/whire"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_finish"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:textAllCaps="true"
                android:textColor="@color/whire"
                android:text="@string/finish"
                android:background="@drawable/background_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
