<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.nguyenvukhanhuygmail.shoppingonline.activity.VerificationEmail">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/verification_email"
        android:textColor="@color/whire"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_send_link"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_login"
        android:padding="16dp"
        android:text="@string/link_to_email"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/txt_link"
        android:text="@string/link_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/whire"
        android:textSize="18sp" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/whire"
        android:textSize="18sp" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/whire"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_done"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_signup"
        android:padding="16dp"
        android:text="@string/finish"
        android:textAllCaps="true"
        android:textColor="@color/whire"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>
