<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nguyenvukhanhuygmail.shoppingonline.fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <ImageView
                            android:scaleType="centerCrop"
                            android:id="@+id/user_wall"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/profile_gradient" />
                    </LinearLayout>

                    <android.support.design.widget.FloatingActionButton
                        app:fabSize="mini"
                        android:src="@drawable/more_action"
                        android:backgroundTint="@color/whire"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="16sp"
                        android:id="@+id/wall_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <include layout="@layout/fab_layout"/>

                </FrameLayout>

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/user_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/default_user" />

                <!--<LinearLayout-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginBottom="3dp"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content">-->

                <!--<android.support.design.widget.FloatingActionButton-->
                <!--android:id="@+id/icon_fab"-->
                <!--app:fabSize="mini"-->
                <!--android:layout_marginRight="95dp"-->
                <!--android:src="@drawable/more_action"-->
                <!--android:backgroundTint="@color/whire"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

            </RelativeLayout>

            <ScrollView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.nguyenvukhanhuygmail.shoppingonline.ultil.CustomEditText
                        android:id="@+id/edt_uName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:ems="12"
                        android:enabled="false"
                        android:hint="@string/user_name"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/Gray"
                        android:textColorHint="@color/Gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray" />

                    <com.nguyenvukhanhuygmail.shoppingonline.ultil.CustomEditText
                        android:id="@+id/edt_uPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:editable="false"
                        android:ems="12"
                        android:enabled="false"
                        android:hint="@string/new_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/Gray"
                        android:textColorHint="@color/Gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray" />

                    <com.nguyenvukhanhuygmail.shoppingonline.ultil.CustomEditText
                        android:id="@+id/uPhoneNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:drawableRight="@drawable/ic_edit_black_24dp"
                        android:ems="12"
                        android:enabled="false"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/Gray"
                        android:textColorHint="@color/Gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray" />

                    <com.nguyenvukhanhuygmail.shoppingonline.ultil.CustomEditText
                        android:id="@+id/uLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:drawableRight="@drawable/ic_location_on_black_24dp"
                        android:ems="12"
                        android:enabled="false"
                        android:hint="@string/location"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/Gray"
                        android:textColorHint="@color/Gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray" />

                    <com.nguyenvukhanhuygmail.shoppingonline.ultil.CustomEditText
                        android:text="Tiền trong tài khoản: 0đ"
                        android:id="@+id/uMoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:drawableRight="@drawable/ic_attach_money_black_24dp"
                        android:ems="12"
                        android:enabled="false"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/Gray"
                        android:textColorHint="@color/Gray" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_commit"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_margin="10dp"
                        android:padding="16dp"
                        android:textAllCaps="true"
                        android:textColor="@color/whire"
                        android:text="@string/finish"
                        android:background="@drawable/background_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
